--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@hot-loader/react-dom": "~16.8.6",
-    "@mendix/pluggable-widgets-typing-generator": "^8.3.1",
+    "@mendix/pluggable-widgets-typing-generator": "mendix/pluggable-widgets-typing-generator#feat/datasource",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "@wdio/cli": "^5.10.9",
